Production deployment ready: Add VPS deployment configuration and documentation
- Add PM2 ecosystem.config.js for process management with cluster mode
- Add .env.example templates for backend and frontend
- Update .gitignore with production files and logs
- Add production build scripts to package.json
- Create comprehensive deployment documentation:
  * QUICKSTART.md - 30-minute deployment guide
  * DEPLOYMENT.md - Complete VPS deployment guide (600+ lines)
  * PRODUCTION.md - Production configuration and security guide
  * DEPLOYMENT_CHECKLIST.md - Step-by-step verification checklist
  * PRODUCTION_READY.md - Deployment overview and status
- Add deploy.sh automated deployment script
- Update README.md with deployment documentation links
- Optimize client build configuration (disable source maps)
- Update navbar InfoModal with improved platform description
- Enhance FeedbackModal with better UX and emoji indicators
- All console statements commented out for production
- Phase 6 retry functionality working correctly
- Comprehensive responsive design implemented
- SEO optimization with meta tags and Open Graph
- Ready for production VPS deployment

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,32 @@ yarn-error.log*
 client/build
 client/node_modules
 .vscode/
+
+# Production
+build/
+dist/
+*.log
+logs/
+
+# PM2
+.pm2/
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.idea/
+*.swp
+*.swo
+*~
+
+# Coverage
+coverage/
+
+# Testing
+.nyc_output/
