--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set BROWSER=none && react-scripts start",
-    "build": "react-scripts build",
+    "start": "set BROWSER=none && set DISABLE_ESLINT_PLUGIN=true && react-scripts --openssl-legacy-provider start",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+    "build:analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
