--- a/client/.env.example
+++ b/client/.env.example
@@ -4,7 +4,7 @@
 
 # API Configuration
 # Development: http://localhost:5000/api
-# Production: https://yourdomain.com/api
+# Production: https://researcher.synthomind.cloud/api
 REACT_APP_API_URL=http://localhost:5000/api
 
 # Optional: Google Analytics ID
